Fixed button-text color for high contrast mode

--- a/src/styles/clipper.less
+++ b/src/styles/clipper.less
@@ -225,3 +225,9 @@
 	padding-left: 5px;
 }
 
+@media (forced-colors: active) {
+	.buttonTextInHighContrast{
+		forced-color-adjust: none;
+		color: ButtonText !important;
+	}
+}
